Data608_Final_Project

--- a/Data608_Final_Project_Data_Analysis.ipynb
+++ b/Data608_Final_Project_Data_Analysis.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will be using Python Plotly to create visualization for this project."
+    "I will be using Python Plotly to create visualization for this project.  "
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "source": [
     "Domestic crime and non Domestic crimes:                                          \n",
-    "Information about the proportion of how many crimes where domestic and non domestic."
+    "Information about the proportion of how many crimes where domestic and non-domestic."
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "source": [
     "Overall Crime timelines:                                      \n",
-    "Give users a clear view on how many crimes have been conducted within that time period."
+    "Give users a clear view on how many crimes have been committed within that time period."
    ]
   },
   {
